mdapioutput/objects/CTPHARMA__Product__c.object
<CustomObject>
	<fields>
        <fullName>IsDentalModel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dental Model</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsHandPiece__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hand Piece</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductSAPcode__c</fullName>
        <label>SAP code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>